Lesson 2 / Setup an empty header, navbar, and welcome page

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,50 +1,35 @@
-<div class="flex flex-col gap-y-10">
+<div class="flex flex-col w-full h-full">
 
-  <div class="flex place-content-center">
-    <h2>Angular App 16 w/tailwind</h2>
-  </div>
 
-  <div class="">
-    Column 2
-
-    <div class="flex flex-row">
-        <!-- basis-{size} sets the initial size of flex items -->
-        <div class="basis-1/3">Row 1</div>
-        <div class="basis-1/3">
-            <div class="flex flex-col justify-center items-center">
-              <div>Row 2a</div>
-              <div>
-                Row 2b has more text
-              </div>
-            </div>
-        </div>
-        <div class="basis-1/3 flex place-content-end self-end ">
-          Row 3</div>
-       </div>
+  <!--    H E A D E R      (will be 60px high) -->
+  <div class="flex-none w-full" style="height: 60px">
+    <app-header></app-header>
   </div>
 
 
-  <div>
-    Column 3
-  </div>
+  <!-- The "overflow: auto" ensures that the scrollbars appear only in the content window if needed -->
+  <!-- The "h-full"         ensures that the navbar and main viewing area use the FULL HEIGHT of the page -->
+  <div class="flex flex-row h-full" style="overflow:auto">
 
-  <!-- gap-x-2.5 is a 10px horizontal gap -->
-  <div class="flex flex-row gap-x-2.5">
-    <!-- basis-{size} sets the initial size of flex items -->
-    <div class="basis-1/3">Row 1</div>
-    <div class="basis-1/3 flex place-content-center">
-      <div class="flex flex-col ">
-        <div>Row 2a</div>
-        <div>Row 2b has more text</div>
+    <!-- The sidenav container must have w-full to use the entire width -->
+    <mat-sidenav-container [hasBackdrop]="false" class="w-full">
+
+      <mat-sidenav position="start" mode="side" [opened]="this.isAppNavVisible">
+
+        <!-- Left Side Navigation Bar -->
+        <app-navbar></app-navbar>
+
+      </mat-sidenav>
+
+
+      <div>
+        <!--  M A I N       V I E W I N G       A R E A  -->
+        <router-outlet></router-outlet>
       </div>
-    </div>
-    <div class="basis-1/3 flex place-content-end self-end ">
-      Row 3</div>
+
+    </mat-sidenav-container>
+
   </div>
+
 </div>
 
-
-
-<div>
-  Column 5
-</div>
