--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -47,3 +47,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   src: url('./assets/fonts/roboto-v30-latin-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   url('./assets/fonts/roboto-v30-latin-700.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
+
+.page-title{
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 20px;
+  white-space: nowrap;  /* stop wrapping of page titles */
+}
+
+.page-wrapper {
+  margin: 10px;
+}
